variables.RunHalf.scala.error
Compilation error:
RunHalf:3: error: value unary_! is not a member of Int
while (!2*baggles = orangecells + 1){
       ^