variables.RunHalf.scala.code
var baggles =0
var orangecells =0
while (!2*baggles = orangecells + 1){
  forward()
  if (isOverBaggle){
   baggles=baggles+1
  }
  if(isOverOrange){
    orangecells=orangecells +1
    }
  
}